[project]
name = "redis-polarsignals-sample"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Sousa",email = "paulo.sousa@redis.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
